--- a/src/main/resources/templates/admin/_drug_form.html
+++ b/src/main/resources/templates/admin/_drug_form.html
@@ -2,20 +2,24 @@
   <div class="modal-content">
     <form
       class="needs-validation"
-      th:action="@{/add-drug}"
+      hx:post="@{__${postLocation}__}"
       method="post"
       th:object="${drug}"
       enctype="multipart/form-data"
+      hx-target="#drugFormModal"
       novalidate
     >
       <div class="modal-header">
         <div
           class="w-100 d-flex justify-content-between align-items-center modal-title"
         >
-          <h5>New Drug</h5>
+          <h5 th:if="${drug.isNew()}">New Drug</h5>
+          <h5 th:unless="${drug.isNew()}">Update Drug</h5>
           <button
             type="button"
             class="btn btn-outline-dark"
+            hx:get="@{/admin/drugs}"
+            hx-target="#drugsTable"
             data-bs-dismiss="modal"
           >
             <i class="bi bi-x-lg"></i>
@@ -23,6 +27,11 @@
         </div>
       </div>
       <div class="modal-body">
+        <input
+          type="hidden"
+          th:name="${_csrf.parameterName}"
+          th:value="${_csrf.token}"
+        />
         <div class="row mb-2 g-2">
           <div class="col col-md-6">
             <div
@@ -64,7 +73,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
+        <button type="submit" class="btn btn-primary">
           Add
         </button>
       </div>
