--- a/src/main/resources/templates/admin/_drug_form.html
+++ b/src/main/resources/templates/admin/_drug_form.html
@@ -32,6 +32,20 @@
           th:name="${_csrf.parameterName}"
           th:value="${_csrf.token}"
         />
+        <div
+          th:if="${param.success}"
+          class="alert alert-info alert-dismissible fade show"
+          role="alert"
+        >
+          <i class="bi bi-check-circle"></i>
+          <strong th:text="${param.message}"></strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
         <div class="row mb-2 g-2">
           <div class="col col-md-6">
             <div
@@ -48,6 +62,17 @@
                 field='price', 
                 label='Price', 
                 hasErrors=${#fields.hasErrors('price')},
+                )}"
+            ></div>
+          </div>
+        </div>
+        <div class="row mb-2 g-2">
+          <div class="col">
+            <div
+              th:replace="~{form_fields :: textField(
+                field='seller', 
+                label='Seller', 
+                hasErrors=${#fields.hasErrors('seller')}
                 )}"
             ></div>
           </div>
@@ -73,8 +98,11 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">
+        <button th:if="${drug.isNew()}" type="submit" class="btn btn-primary">
           Add
+        </button>
+        <button th:if="${!drug.isNew()}" type="submit" class="btn btn-primary">
+          Update
         </button>
       </div>
     </form>
