--- a/src/main/resources/templates/admin/_drug_form.html
+++ b/src/main/resources/templates/admin/_drug_form.html
@@ -56,12 +56,21 @@
                 )}"
             ></div>
           </div>
-          <div class="col col-md-6">
+          <div class="col col-md-3">
             <div
               th:replace="~{form_fields :: numberField(
                 field='price', 
                 label='Price', 
                 hasErrors=${#fields.hasErrors('price')},
+                )}"
+            ></div>
+          </div>
+          <div class="col col-md-3">
+            <div
+              th:replace="~{form_fields :: numberField(
+                field='quantity', 
+                label='Quantity', 
+                hasErrors=${#fields.hasErrors('quantity')},
                 )}"
             ></div>
           </div>
